Header component added

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,9 @@
 .App-link {
   color: #09d3ac;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
