--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
 body {
   margin: 0;
+  font-family: 'Muli', sans-serif;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #090909;
 }
 
 code {
